Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
11.4
-
Can result in unexpected behaviour
-
Partitioned tables now are named correctly on case insensitive filesystems have have predictable results when renaming and altering them
-
Q3/2026 Server Maintenance
Description
I originally tested on Windows. But in order that Windows is not blamed specifically for it, I used Linux, and ciopfs to mount case-insensitive filesystem there.
The result is the same or almost the same. Anyway, here is the snippet (tested version is 11.4, I did not check anything else)
Completed: Failed 20/130 tests, 84.62% were successful.
|
 |
Failing test(s): parts.alter_table parts.debug_innodb_crash parts.partition_mgm_lc2_innodb parts.debug_innodb_fail parts.partition_mgm_lc2_memory parts.partition_special_innodb parts.partition_mgm_lc2_myisam parts.partition_basic_symlink_myisam parts.partition_basic_symlink_innodb
|
One (but not only) typical error is
"mariadbd: /home/wlad/11.4/sql/mdl.h:438: void MDL_key::mdl_key_init(MDL_key::enum_mdl_namespace, const char*, const char*): Assertion `mdl_namespace_arg == USER_LOCK || Lex_ident_fs(db, m_db_name_length). ok_for_lower_case_names()' failed." with this callstack
sql/mdl.h:441(MDL_key::mdl_key_init(MDL_key::enum_mdl_namespace, char const*, char const*))[0x61b0a153da53]
|
sql/mdl.cc:1020(MDL_request::init_with_source(MDL_key::enum_mdl_namespace, char const*, char const*, enum_mdl_type, enum_mdl_duration, char const*, unsigned int))[0x61b0a15f127b]
|
sql/sql_table.cc:10871(mysql_alter_table(THD*, st_mysql_const_lex_string const*, st_mysql_const_lex_string const*, Table_specification_st*, TABLE_LIST*, Recreate_info*, Alter_info*, unsigned int, st_order*, bool, bool))[0x61b0a1525626]
|
sql/sql_alter.cc:701(Sql_cmd_alter_table::execute(THD*))[0x61b0a15ed2b1]
|
sql/sql_parse.cc:5876(mysql_execute_command(THD*, bool))[0x61b0a13ea3f2]
|
sql/sql_parse.cc:7899(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x61b0a13f070e]
|
sql/sql_parse.cc:1907(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x61b0a13dcc47]
|
sql/sql_parse.cc:1418(do_command(THD*, bool))[0x61b0a13db568]
|
sql/sql_connect.cc:1497(do_handle_one_connection(CONNECT*, bool))[0x61b0a15e0a8c]
|
sql/sql_connect.cc:1411(handle_one_connection)[0x61b0a15e0801]
|
perfschema/pfs.cc:2203(pfs_spawn_thread)[0x61b0a1b56da3]
|
nptl/pthread_create.c:442(start_thread)[0x7b2b4c294ac3]
|
There are others that are "interesting" cases
At line 116: query 'SELECT * FROM TableB' failed: ER_NOT_FORM_FILE (1033): Incorrect information in file: './mysql_test_db/tableb.frm'
|
It does not look like buildbot contains anything that would run parts suite, so it is broken, on Windows and macOS, as seen here
elenst, since it indicates missing testing, might be of interest for you.
Attachments
Issue Links
- includes
-
MDEV-28154 parts.alter_table fails on hfs+, Assertion `mdl_namespace_arg == USER_LOCK || ok_for_lower_case_names(db)' failed in MDL_key::mdl_key_init
-
- Closed
-
- is duplicated by
-
MDEV-39256 parts.alter_table asserts on MacOSX
-
- Closed
-
- relates to
-
MDEV-33616 Tests Failing on macOS, organized by failure kind
-
- In Review
-