MDEV-37739 Move filename canonicalisation out of handlerton method to ha_delete_table

Just like when creating a table, the name canonicalisation happens in
ha_create_table.

This still allows table name canonicalisation to still take place
normally (e.g. in a DROP TABLE statement), but also fixes call the
handlerton method to drop partitions from DDL recovery, as for files
corresponding to partitions, in the format of
<table_name>#P#<partition_name>, consistently only table names are
canonicalised. For example in ha_partition::drop_partitions, first the
table name is canonicalised, before the #P#<partition_name> part is
appended, and the full name is passed to file->delete_table.

Strengthen some previous failing testcases to show that partition
names don't get lowered.